Refs #43 fixed css for the ott to have horizontal scroll bar (#comment:92)

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+html
+{
+	overflow-x:auto!important;
+}
+
 html,body {
 	height: 100%;
 	margin-bottom:1px;
